2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Slight
	fix for growing the buffer used by g_gethostbyname_r().

2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.h.in: Added new headers.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Use the
	re-entrant g_gethostbyname_r() function rather than
	gethostbyname() so that we are threadsafe.

	* gmime/gmime-host-utils.[c,h]: New source files containing
	gethostbyname_r() and gethostbyaddr_r() implementations.

	* gmime/gmime-filter-windows.[c,h]: New source files implementing
	a windows charset detection filter.

	* gmime/gmime-charset.c (g_mime_charset_iso_to_windows): New
	function to return the windows-cp125# equivalent charset for
	iso-8859-# charsets.

	* gmime/gmime-parser.c (parser_push_boundary): Soptimise a bit :-)
	(parser_push_boundary): 

2003-08-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart.c (g_mime_multipart_foreach): Simplified.

	* gmime/gmime-stream-cat.c (stream_read): Same here.
	(stream_write): And finally here.

	* gmime/gmime-stream-file.c (stream_read): Same.
	(stream_write): And again...

	* gmime/gmime-stream-fs.c (stream_read): Here too.
	(stream_write): And here.

	* gmime/gmime-stream-mmap.c (stream_read): Same as the mem stream.
	(stream_write): Same.

	* gmime/gmime-stream-mem.c (stream_read): Need to fix the MIN
	expresion so that both args are signed, otherwise 'len' will be
	the min if the 'bytes-left' calculation is negative.
	(stream_write): Same.

2003-07-29  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-message.c (g_mime_message_get_recipients): Return
	const.

	* gmime/gmime-message-part.c (g_mime_message_part_get_message):
	Ref the content message before returning it.

2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart.c (g_mime_multipart_foreach): Don't
	descend recursively... make the user descend into sub-multiparts