@@ -18,8 +18,8 @@ and so *may* be folded differently from the original Content-*
 headers.
 
 - make thread-safe? some stuff already is, like the gmime-iconv code
-and some of the other charset stuff. Streams, however, are not. How
-can I do this...?
+and some of the other charset stuff. Streams and other objects,
+however, are not. How can I do this...?
 
 - Possibly make the GMime parser incremental.
 
