@@ -1,5 +1,9 @@
 2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>
 
+	* gmime/gmime-charset.c (g_mime_charset_name): Added back this
+	symbol in order to avoid breaking ABI.
+	(g_mime_charset_locale_name): Same.
+
 	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Slight
 	fix for growing the buffer used by g_gethostbyname_r().
 
